Fix clipping image on smaller screen sizes

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,8 +2,7 @@
   display: grid;
   grid-column: 1;
   grid-row: 1;
-  width: 100%;
-  height: 100%;
+  width: fit-content;
   margin-top: -100px;
   padding-bottom: 150px;
   padding-right: 500px;
